--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "yay.js": "^0.0.30"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
