--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.474.0",
+    "nanoid": "^5.1.5",
     "next": "^15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
