--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "yay.js": "^0.0.30"
+    "yay.js": "^0.0.30",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
